clusters/production/apps/esp-poller-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esp-poller-production
  labels:
    app.kubernetes.io/part-of: esp-poller-production
